# python_project

./: .pre-commit-config.yaml  README.md  coverage.xml  pyproject.toml
.github/workflows/: build.yml
python_project/: __init__.py  main.py
python_project/tests/: test_hello.py
